fixed filter gap when sitcky

--- a/src/pages/Commendations/Commendations.scss
+++ b/src/pages/Commendations/Commendations.scss
@@ -19,6 +19,7 @@
 
     &.sticky {
       position: fixed;
+      margin-top: 0px;;
       top: 0;
       width: 100%;
       background-color: rgb(19, 19, 19);
